objects/Correspondence__c.object
<CustomObject>
    <fields>
        <fullName>BrandDesc__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>Brand_Corres__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>Brand_Corres__r.BrandCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Corres__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Correspondences</relationshipLabel>
        <relationshipName>Correspondences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Correspondences</relationshipLabel>
        <relationshipName>Correspondences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feed outbound- Correspondence</description>
        <label>Document Type Code</label>
        <referenceTo>DocumentType__c</referenceTo>
        <relationshipLabel>Correspondences</relationshipLabel>
        <relationshipName>Correspondences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>TEXT(DocType__r.DocTyp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LetterDate__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <label>Letter Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LetterDesc__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>DocType__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterId__c</fullName>
        <label>Master ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>DocType__r.PkgCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requires_Fulfillment__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>DocType__r.ReqFulfillment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Fulfillment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <label>Correspondence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MasterId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Correspondence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>